src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dwF1000-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\ndefault column width: F1000\nwant fullscreen: BN\ntabbed"
expression: snapshot
---
initial configure:
size: 1239 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 1239 × 688, bounds: 1239 × 688, states: [Activated]
